overflow for main container, sass fix

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -38,9 +38,6 @@
     height: calc(90vh - 63px);
     overflow: hidden;
   }
-  .admin-title {
-    height: 7rem !important;
-  }
   .admin-dashboard-container {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
